real-cks/3/q15/backend.yaml
# secure-app backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-app
  namespace: team-pink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-app
  template:
    metadata:
      labels:
        app: secure-app
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: secure-app
  namespace: team-pink
spec:
  selector:
    app: secure-app
  ports:
    - port: 80
      targetPort: 80
---
# secure-api backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-api
  namespace: team-pink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-api
  template:
    metadata:
      labels:
        app: secure-api
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: secure-api
  namespace: team-pink
spec:
  selector:
    app: secure-api
  ports:
    - port: 80
      targetPort: 80
