real-cks/3/q15/ingress-plain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure
  namespace: team-pink
spec:
  ingressClassName: nginx
  rules:
    - host: secure-ingress.test
      http:
        paths:
          - path: /app
            pathType: ImplementationSpecific
            backend:
              service:
                name: secure-app
                port:
                  number: 80
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: secure-api
                port:
                  number: 80
